[tool.poetry]
name = "solana-blockchain-analyzer"
version = "0.1.0"
description = ""
authors = ["MedadRufus <medadrufus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
solana = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
